...
            .navigationTitle("Task Details")
            .toolbar(content: {
                ToolbarItem(placement: .navigationBarTrailing) {
                    Button("Edit") {
                        isEditing = true
                    }
                    .accessibilityIdentifier("EditButton")
                }
            })
            .sheet(isPresented: $isEditing, onDismiss: {
                if shouldDismissAfterUpdate {
                    DispatchQueue.main.asyncAfter(deadline: .now() + 0.3) {
                        presentationMode.wrappedValue.dismiss()
...
                    if let id = todo.id {
                        await viewModel.deleteTodo(todo)
                        presentationMode.wrappedValue.dismiss()
                    }
                }
            }) {
                Label("Delete", systemImage: "trash")
                    .frame(maxWidth: .infinity)
            }
            .buttonStyle(.borderedProminent)
            .tint(.red)
            
            if !isEditing {
...
